# llm_cancer_screening

./: .gitignore  Cargo.toml  README.md  output.csv  output_test.csv
benches/: benchmark.rs
src/: api.rs  csv_reader.rs  csv_storage.rs  db.rs  lib.rs  main.rs  mock_server.rs  storage.rs
src/sql/: initialize.sql  llm_cancer_database.db  llm_cancer_database.db-shm  llm_cancer_database.db-wal  write_data.sql
tests/: call_api_test.rs  create_futures_test.rs  csv_reader_test.rs  csv_storage_test.rs  mock_server_test.rs
tests/data/: cancer_10_records.csv  cancer_text_data.csv
