[package]
name = "llm_cancer_screening"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
httpmock = "0.6"
serde_json = "1.0"
polars = { version = "0.23", features = ["csv-file"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }