[package]
name = "llm_cancer_screening"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.2"
futures = "0.3"
dotenv = "0.15"
httpmock = "0.7.0"
serde_json = "1.0.134"
polars = "0.45.1"
async-trait = "0.1.51"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5.1", features = ["async"] }